--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,3 +1,3 @@
-  <%= link_to "Smileku", root_path, :class => "brand" %>
+  <%= link_to "&infin;".html_safe, root_path, :class => "brand" %>
   <ul class="nav nav-pills pull-right">
   </ul>
