--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,10 +5,12 @@
     <hr>
     <h2>Create your account</h2>
       <br>
-    <%= form_for @user do |f| %>
-      <%= f.text_field :username, :placeholder => "Username" %><br>
-      <%= f.text_field :email, :placeholder => "Email Address" %><br>
-      <%= f.password_field :password, :placeholder => "Password" %><br>
+  </div>
+  <div class="offset4">
+    <%= bootstrap_form_for @user do |f| %>
+      <%= f.text_field :username, :placeholder => "Username" %>
+      <%= f.text_field :email, :placeholder => "Email Address" %>
+      <%= f.password_field :password, :placeholder => "Password" %>
       <%= f.submit "Create Account", :class => "btn" %>
     <% end %>
   </div>
