--- a/app/views/stories/show.html.haml
+++ b/app/views/stories/show.html.haml
@@ -2,9 +2,9 @@
 	.row
 		.span5
 			.row.span4
-				%img(src="http://ih2.redbubble.net/image.14699308.4227/fc,550x550,creme.jpg")
+				=image_tag(@story.large_cover_url)
 			.row.span5
-				%h2 The Adventures of Huckleberry Finn
+				%h2= @story.title
 		.span7
 			.row
 				%h3 KU#32 by #{link_to 'Bob', '#'}
@@ -12,8 +12,8 @@
 					%p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas tempus pellentesque leo vel mattis. Cras sed turpis pellentesque, adipiscing erat in, ultricies nulla. Integer congue dictum urna nec consectetur. Aenean at nibh et est malesuada scelerisque. Morbi est urna, vulputate id odio sit amet, posuere varius neque. Fusce dictum, nunc sit amet pretium iaculis, dui felis sollicitudin nibh, vitae vulputate orci elit id massa. Quisque vel scelerisque velit. Integer porttitor mi vel risus scelerisque porttitor. Maecenas tempus vestibulum tortor, ultricies molestie nibh dapibus sed. Nullam at velit lobortis, scelerisque augue posuere, scelerisque diam.
 
 					Nunc quis cursus tellus, eu tincidunt augue. Proin eget iaculis nibh. Sed consectetur tincidunt erat, quis rutrum neque eleifend non. Duis vitae urna eu nisl lobortis interdum. Ut purus mi, mollis ornare euismod eget, lobortis sit amet dui. Suspendisse vestibulum vulputate libero, vitae suscipit dui auctor a. Sed pulvinar volutpat lacus, sit amet blandit nisi. Cras at lacus nisi. Sed cursus, libero ut auctor scelerisque, felis est sodales risus, eu hendrerit orci ipsum vitae purus. Pellentesque malesuada hendrerit odio vel suscipit. Ut quis mi felis.
-			.row.pull-right
-				.btn-group
+			.row
+				.btn-group.pull-right
 					.btn.btn-large Next
 					.btn.btn-large Skip
 					.btn.btn-large Random
