--- a/app/views/shared/show.html.haml
+++ b/app/views/shared/show.html.haml
@@ -11,6 +11,7 @@
 				.well
 					%p= @ku.body
 			.row
+				=link_to "Add a Ku", new_story_ku_path(story_id: @story.id, parent_id: @ku.id), class: "btn btn-large"
 				.btn-group.pull-right
 					.btn.btn-large Next
 					.btn.btn-large Skip
