--- a/app/views/stories/new.html.haml
+++ b/app/views/stories/new.html.haml
@@ -1,7 +1,7 @@
 %section.container
 	.row
 		%header.span12
-			%h2 Start a new story
+			%h2 Start your story
 	.row
 		=bootstrap_form_for @story do |f|
 			%fieldset
