update new story ku view

--- a/app/views/kus/new.html.haml
+++ b/app/views/kus/new.html.haml
@@ -12,6 +12,7 @@
 					%a
 						=link_to(@story.user.username, user_path(@story.user))
 			=form_for [@story,@ku] do |f|
-				=f.label :body, "Add your ku:"
+				=hidden_field_tag "ku[parent_id]", params[:parent_id]
+				=f.label :body, "Add to the story:"
 				=f.text_area :body, class: "span7", rows: 15
-				=f.submit
+				=f.submit "Publish", class: "btn btn-large"
