--- a/app/views/stories/index.html.haml
+++ b/app/views/stories/index.html.haml
@@ -1,15 +1,19 @@
-.row-fluid
-  %h1 Stories
-  .stories.row
-    %h4 Recent Stories
-    - @stories.each do |story|
-      .story.span2
-        = link_to image_tag("#{story.small_cover_url}"), story_path(story)
-        %p= link_to "#{story.truncated_title} by #{story.user.username}", story_path(story)
-  / .stories.row
-  /   %h4 Recommended Stories
-  /   - 5.times do
-  /     .story.span2
-  /       = link_to "", nil do
-  /         %img(src="/tmp/#{['story1', 'story2', 'story3', 'story4'].sample}.jpg")
-  /       %p= link_to "Something of a long title: Vanity is to blame", "#"
+%section.container
+  .row-fluid
+    %ul.nav.nav-tabs
+      %li.active= link_to "Read", '#'
+      %li= link_to "Write", new_story_path
+    .stories.row
+      %header
+        %h2 Recent Stories
+      - @stories.each do |story|
+        .story.span2
+          = link_to image_tag("#{story.small_cover_url}"), story_path(story)
+          %p= link_to "#{story.truncated_title} by #{story.user.username}", story_path(story)
+    / .stories.row
+    /   %h4 Recommended Stories
+    /   - 5.times do
+    /     .story.span2
+    /       = link_to "", nil do
+    /         %img(src="/tmp/#{['story1', 'story2', 'story3', 'story4'].sample}.jpg")
+    /       %p= link_to "Something of a long title: Vanity is to blame", "#"
