--- a/app/views/stories/new.html.haml
+++ b/app/views/stories/new.html.haml
@@ -1,13 +1,16 @@
 %section.container
-	.row
-		%header.span12
-			%h2 Start your story
-	.row
+	.row-fluid
+		%ul.nav.nav-tabs
+			%li= link_to "Read", stories_path
+			%li.active= link_to "Write", '#'
+	.row.span12
+		%header
+			%h2 Start a new story
 		=bootstrap_form_for @story do |f|
 			%fieldset
-				.span5
-					=f.text_field :title, class: "span5"
-					=f.text_area :description, class: "span5", rows: 3
+				.span4
+					=f.text_field :title, class: "span4"
+					=f.text_area :description, class: "span4", rows: 3
 					=f.text_field :large_cover_url
 					=f.text_field :small_cover_url
 				.span7
