css on show page and new ku

--- a/app/assets/stylesheets/story_page.css.scss
+++ b/app/assets/stylesheets/story_page.css.scss
@@ -1,3 +1,15 @@
 .row10 {
-margin-top: 10px;
+	margin-top: 10px;
+}
+
+p.ku_body {
+	font-family: monospace;
+	font-size: 1.4em;
+	line-height: 1.3em;
+}
+
+p.story_description {
+	font-style: italic;
+	font-size: 1em;
+	line-height: 1.2em;
 }
