--- a/app/views/kus/new.html.haml
+++ b/app/views/kus/new.html.haml
@@ -3,11 +3,11 @@
 		.span5
 			.row.span4
 				= image_tag @story.large_cover_url
-			.row.span5
+			.row.span4
 				%h2= @story.title
 		.span7
 			.well
-				%p 
+				%p.story_description 
 					="#{@story.description} -- "
 					%a
 						=link_to(@story.user.username, user_path(@story.user))
