added front page and non logged in user filters

--- a/app/assets/stylesheets/front_page.css.scss
+++ b/app/assets/stylesheets/front_page.css.scss
@@ -1,11 +1,11 @@
 .giant {
-  font-size: 1000%;
+  font-size: 750%;
   padding: 45px;
 }
 
 .jumbotron {
   min-height: 500px;
-  background: url('header2.jpg')
+  background: url('night-stars-sky.jpg')
 }
 
 .front-left {
