--- a/app/views/shared/show.html.haml
+++ b/app/views/shared/show.html.haml
@@ -9,8 +9,8 @@
 			.row
 				%h3 
 					#{@ku.number_in_story} by #{link_to @ku.author_name, user_path(@ku.user)}
-					- if current_user.present?
-						=link_to_if current_user.owns(@ku), 'Edit', edit_ku_path(@ku), class: 'btn btn-mini'
+					- if current_user.present? && current_user.owns(@ku)
+						=link_to 'Edit', edit_ku_path(@ku), class: 'btn btn-mini'
 			.row
 				.well
 					%p.ku_body= @ku.body
