--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -3,6 +3,8 @@
 		.span4
 			%h1= @user.username
 			%h4= "#{@user.kus.count} kus since #{@user.created_at.strftime('%B %Y')}"
+			- if current_user.present? && current_user == @user
+				=link_to 'Update Profile', edit_user_path(@user), class: 'btn btn-mini'
 		.span8
 			%h2= "Recent Kus by #{@user.username}"
 			- @user.kus.reverse.each do |ku|
