add voting to ku show template

--- a/app/assets/stylesheets/story_page.css.scss
+++ b/app/assets/stylesheets/story_page.css.scss
@@ -13,3 +13,11 @@ p.story_description {
 	font-size: 1em;
 	line-height: 1.2em;
 }
+
+.vote-block {
+	display: inline-block;
+}
+
+h2.vote-block {
+	padding-left: 5px;
+}
