--- a/app/views/shared/show.html.haml
+++ b/app/views/shared/show.html.haml
@@ -7,7 +7,7 @@
 				%h2= @story.title
 		.span7
 			.row
-				%h3 
+				%h3
 					#{@ku.number_in_story} by #{link_to @ku.author_name, user_path(@ku.user)}
 					- if current_user.present? && current_user.owns(@ku)
 						=link_to 'Edit', edit_ku_path(@ku), class: 'btn btn-mini'
@@ -15,8 +15,12 @@
 				.well
 					%p.ku_body= @ku.body
 			.row
-				=link_to "Add a Ku", new_story_ku_path(story_id: @story.id, parent_id: @ku.id), class: "btn btn-large"
+				=link_to '<i class="icon-thumbs-up"></i>'.html_safe, vote_ku_path(@ku, value: true), method: :post, class: "btn btn-large vote-block"
+				=link_to '<i class="icon-thumbs-down"></i>'.html_safe, vote_ku_path(@ku, value: false), method: :post, class: "btn btn-large vote-block"
+				%h4.vote-block= "#{@ku.votes.count} Votes"
 				.btn-group.pull-right
 					=link_to_unless @ku.next_ku.nil?, 'Next', url_for(@ku.next_ku), class: 'btn btn-large'
 					=link_to_unless @ku.skip_ku.nil?, 'Skip', url_for(@ku.skip_ku), class: 'btn btn-large'
 					=link_to_unless @ku.random_ku.nil?, 'Random', url_for(@ku.random_ku), class: 'btn btn-large'
+			.row.row10
+				=link_to "Add a Ku", new_story_ku_path(story_id: @story.id, parent_id: @ku.id), class: "btn btn-large pull-right"
