--- a/app/assets/stylesheets/story_page.css.scss
+++ b/app/assets/stylesheets/story_page.css.scss
@@ -19,5 +19,10 @@ p.story_description {
 }
 
 h2.vote-block {
-	padding-left: 5px;
+	margin-left: 12px;
 }
+
+.span3.reverse-margin {
+	margin-left: 0;
+	margin-right: 30px;
+ }
