--- a/app/views/ui/front.html.haml
+++ b/app/views/ui/front.html.haml
@@ -1,9 +1,10 @@
-.container
-  .jumbotron.row-fluid
-    .front-left.span7
+.jumbotron
+  .container
+    .span7.front-left
       %h1.giant Smileku
+      %br
       %h1 &infin; Infinite Stories
-    .front-right.span4
+    .span4.front-right
       %h3 Welcome to Smileku
       %p Join writers around the world and co-create stories for future generations.
       =form_for "" do |f|
