--- a/app/views/statics/front.html.haml
+++ b/app/views/statics/front.html.haml
@@ -11,17 +11,16 @@
 			= link_to "Sign up now", registration_path, class: "btn btn-large btn-block"
 %br
 .container
-	.content
-		.row.row10
+	.content.front-page#about
+		.row
 			.span5
 			.about-block.span7
-				%h1#about About Smileku
 				%br
-				%p Smileku is a place for crowd sourced storytelling.  Our mission is to explore the potential of <em>creative writing</em> and <em>journalism</em> using social web technology.  We believe that reading and sharing stories with people around the world will help make us more connected and compassionate.  We're looking for writers who feel the same way.
-				%br
-				%h2 How does it work?
-				%p At the core of Smileku is the ku.  Kus are units of text that belong to a single story.  Anyone can add a ku to a story, and readers comment and cast votes for their favorite ones.  As stories mature, the most popular kus show up first, shaping the way the story is read.
+				%h1 What is Smileku?
+				%p Smileku is a place for crowd sourced storytelling.  Our mission is to explore the boundaries of <em>creative writing</em> and <em>journalism</em> using social web technology.  We believe sharing stories with people around the world will help make us a better connected and more compassionate society.  We're looking for writers who feel the same way.
+				%h1 How does it work?
+				%p At the core of Smileku is the ku.  Kus are units of text that belong to a story.  Anyone can add a ku to a story, and readers comment and cast votes for their favorite ones.  As stories mature, the most popular kus show up first, shaping the way the story is read.
 				%p Anyone can start a story on Smileku.  All that's required is a title, description, image and an awesome first ku.  After your story is started, you or anyone else can add more kus.
-				%p Find a story on a topic you feel passionate about, or if you can't find one, start one of your own. Have more questions? <a href="#">Read our FAQ</a>
+				%p Find a story on a topic you feel passionate about or start one of your own. Have more questions? <a href="#">Send us a message</a>
 				%br
-				= link_to "Join Smileku", registration_path, class: "btn btn-large btn-block"
+				= link_to "Sign up now", registration_path, class: "btn btn-large btn-block"
