--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,7 @@
             </div>
           </div>
           <footer>
+            <%= render 'layouts/footer' %>
           </footer>
         </div>
       </div> <!--! end of .container -->
