front page available for logged in

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -33,7 +33,7 @@
       .row-fluid
         .span12
           .span8
-            %a= link_to('About Us', '#') + " &bull;".html_safe
+            %a= link_to('About Us', 'front#about') + " &bull;".html_safe
             %a= link_to('Terms of service', '#') + " &bull;".html_safe
             %a= link_to('Contact', '#')
           .span4
