--- a/app/views/statics/front.html.haml
+++ b/app/views/statics/front.html.haml
@@ -6,9 +6,12 @@
 			%h1 &infin; Infinite Stories
 		.front-right.span4
 			%h3 Welcome to Smileku
-			%p Join writers around the world and co-create stories for future generations. <strong><a href="#about">Learn more.</a></strong>
+			%p Join writers around the world and co-create stories for future generations. <strong><a href="#about">Learn more</a></strong>
 			%br
-			= link_to "Sign up now", registration_path, class: "btn btn-large btn-block"
+			- if logged_in?
+				= link_to "Start a story", new_story_path, class: "btn btn-large btn-block"
+			- else
+				= link_to "Sign up now", registration_path, class: "btn btn-large btn-block"
 %br
 .container
 	.content.front-page#about
@@ -18,9 +21,12 @@
 				%br
 				%h1 What is Smileku?
 				%p Smileku is a place for crowd sourced storytelling.  Our mission is to explore the boundaries of <em>creative writing</em> and <em>journalism</em> using social web technology.  We believe sharing stories with people around the world will help make us a better connected and more compassionate society.  We're looking for writers who feel the same way.
-				%h1 How does it work?
+				%h2 How it works
 				%p At the core of Smileku is the ku.  Kus are units of text that belong to a story.  Anyone can add a ku to a story, and readers comment and cast votes for their favorite ones.  As stories mature, the most popular kus show up first, shaping the way the story is read.
 				%p Anyone can start a story on Smileku.  All that's required is a title, description, image and an awesome first ku.  After your story is started, you or anyone else can add more kus.
-				%p Find a story on a topic you feel passionate about or start one of your own. Have more questions? <a href="#">Send us a message</a>
+				%p Find a story on a topic you feel passionate about or start one of your own. Have more questions? <strong><a href="#">Send us a message</a></strong>
 				%br
-				= link_to "Sign up now", registration_path, class: "btn btn-large btn-block"
+				- if logged_in?
+					= link_to "Start a story", new_story_path, class: "btn btn-large btn-block"
+				- else
+					= link_to "Sign up now", registration_path, class: "btn btn-large btn-block"
