--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -3,8 +3,9 @@
     .span10.offset1
       %h1 Create an account
       = bootstrap_form_for @user do |f|
-        = f.text_field :username, :placeholder => "Username"
-        = f.text_field :email, :placeholder => "Email Address"
-        = f.password_field :password, :placeholder => "Password"
+        = f.text_field :username
+        = f.text_field :email
+        = f.password_field :password
+        = f.password_field :password_confirmation
         = f.submit "Create Account", :class => "btn"
       =link_to "Already have an account?", login_path
