--- a/app/views/stories/new.html.haml
+++ b/app/views/stories/new.html.haml
@@ -1,11 +1,12 @@
 %section.container
 	.row-fluid
 		%ul.nav.nav-tabs
-			%li= link_to "Read", stories_path
-			%li.active= link_to "Write", '#'
+			%li.activities= link_to "Read", stories_path
+			%li.activities.active= link_to "Write", '#'
 	.row.span12
 		%header
 			%h2 Start a new story
+		%br
 		=bootstrap_form_for @story do |f|
 			%fieldset
 				.span4
