css updates story activities icons

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -33,8 +33,8 @@
       .row-fluid
         .span12
           .span8
-            %a= link_to('About Us', 'front#about') + " &bull;".html_safe
-            %a= link_to('Terms of service', '#') + " &bull;".html_safe
+            %a= link_to('About', '/front#about') + " &bull;".html_safe
+            %a= link_to('Terms', '#') + " &bull;".html_safe
             %a= link_to('Contact', '#')
           .span4
             %p.muted.pull-right © 2013 Smileku
