--- a/app/assets/stylesheets/ku_page.css.scss
+++ b/app/assets/stylesheets/ku_page.css.scss
@@ -2,12 +2,17 @@
   min-height: 20px;
   padding: 19px;
   margin-bottom: 20px;
-  background-color: clear;
-  border: 1px solid #808080;
+  background-color: #FCFFFF;
+  border: 1px solid #e3e3e3;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
   -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  color: #808080;
+}
+
+.story_well {
+  background-color: #FCFFFF;
 }
