tested ku navigation methods

--- a/app/views/kus/new.html.haml
+++ b/app/views/kus/new.html.haml
@@ -19,4 +19,4 @@
 				=f.submit "Publish", class: "btn btn-large"
 			%br
 			%p Review the parent:
-			.clear_well= @text.html_safe
+			.clear_well= @text
