--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,5 +34,6 @@
         </div>
       </div> <!--! end of .container -->
     </div> <!--! end of #main -->
+    <%= render 'layouts/ga' if Rails.env.production? %>
   </body>
 </html>
