change comment body to text

--- a/app/views/kus/show.html.haml
+++ b/app/views/kus/show.html.haml
@@ -27,5 +27,5 @@
 				= render "comments/form"
 				- @ku.comments.each do |c|
 					%hr.row
-					%p= c.body
+					%p= c.filter(:body).html_safe
 					%p.pull-right= "#{time_ago_in_words(c.created_at)} ago by #{link_to c.user.username, user_path(c.user)}".html_safe
