create contact form

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -35,6 +35,6 @@
           .span8
             %a= link_to('About', '/front#about') + " &bull;".html_safe
             %a= link_to('Terms', '#') + " &bull;".html_safe
-            %a= link_to('Contact', '#')
+            %a= link_to('Contact', '/contact')
           .span4
             %p.muted.pull-right © 2013 Smileku
