--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -1,8 +1,8 @@
 @import "bootstrap";
-body { padding-top: 60px; }
 @import "bootstrap-responsive";
 
 body {
+  padding-top: 40px;
   margin: 0;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
