--- a/app/assets/stylesheets/story_page.css.scss
+++ b/app/assets/stylesheets/story_page.css.scss
@@ -31,3 +31,10 @@ p.story_description {
 	margin-left: 0;
 	margin-right: 30px;
  }
+
+.modal-body {
+  position: relative;
+  max-height: 400px;
+  padding: 15px;
+  overflow-y: auto;
+}
