set order of kus on story

--- a/app/views/statics/front.html.haml
+++ b/app/views/statics/front.html.haml
@@ -24,7 +24,7 @@
 				%h2 How it works
 				%p At the core of Smileku is the ku.  Kus are units of text that belong to a story.  Anyone can add a ku to a story, and readers comment and cast votes for their favorite ones.  As stories mature, the most popular kus show up first, shaping the way the story is read.
 				%p Anyone can start a story on Smileku.  All that's required is a title, description, image and an awesome first ku.  After your story is started, you or anyone else can add more kus.
-				%p Find a story on a topic you feel passionate about or start one of your own. Have more questions? <strong><a href="#">Send us a message</a></strong>
+				%p Find a story on a topic you feel passionate about or start one of your own. Have more questions? <strong><a href="mailto:contact@smileku.com?Subject=A%20message" target="_top">Send us a message</a></strong>
 				%br
 				- if logged_in?
 					= link_to "Start a story", new_story_path, class: "btn btn-large btn-block"
