pw resets ready for specs

--- a/app/views/app_mailer/password_reset_email.html.erb
+++ b/app/views/app_mailer/password_reset_email.html.erb
@@ -6,6 +6,7 @@
   <body>
     <p>Hi <%= @user.username %>,</p> 
 		<p>Sorry you've been having trouble with logging in.  Please click the link below to reset your password:</p>
-		<h2><%= link_to "Reset your Smileku Password", password_reset_url(@user.token) %></h2>
+		<p><%= link_to "Reset your Smileku Password", password_reset_url(@user.token) %></p>
+		<p>- Team Smileku</p>
   </body>
 </html>
