--- a/app/views/app_mailer/password_reset_email.html.erb
+++ b/app/views/app_mailer/password_reset_email.html.erb
@@ -5,8 +5,9 @@
   </head>
   <body>
     <p>Hi <%= @user.username %>,</p> 
-		<p>Sorry you've been having trouble with logging in.  Please click the link below to reset your password:</p>
-		<p><%= link_to "Reset your Smileku Password", password_reset_url(@user.token) %></p>
+		<p>Sorry you've been having trouble logging into Smileku.  Please click the link below to reset your password:</p>
+		<h3><%= link_to "Reset your Smileku Password", password_reset_url(@user.token) %></h3>
+		<p>Let us know if you have any additional questions.</p>
 		<p>- Team Smileku</p>
   </body>
 </html>
