minor nanox css changes

--- a/app/views/posts/smilekuxnano.html.haml
+++ b/app/views/posts/smilekuxnano.html.haml
@@ -11,10 +11,11 @@
 			.row
 				.span6
 					%br
-					%p Hello writers! 
-					%p The time is nigh for <a href="http://nanowrimo.org/" target="_blank">National Novel Writing Month</a>, or as some like to call it, November.  This month, thousands of brave writers around the world battle inner demons, childhood fears and their darkest secrets... Or something like that.  By the end, they emerge as novelists with the word count to prove it.
-					%p For most of us, writing doesn’t come easy.  Faced with the challenge of fifty thousand words over the course of thirty days, it’s not unusual to feel a bit queasy.  Even the best writers face the time tested challenges of writers block and its close cousin procrastination.  <strong>That’s why we’re doing a collaborative NaNo on Smileku.</strong>
-					%p Many writers want to do NaNoWriMo but don’t have the time to commit a whole 50,000 words on their own.  That’s okay.  We’re putting together a collaborative story on Smileku for writers to add to through the month of November.  This way anyone can get in on the action, writing fast and furious NaNo style without making any grand commitments.
-					%p If you’d like to get involved, <a href="/registration">create an account</a> on Smileku if you haven’t already.  Then send us an <a href="mailto:contact@smileku.com?Subject=NaNoWriMo%20I%27m%20in" target="_blank">email</a> or <a href="http://clicktotweet.com/dFrVf" target="_blank">tweet us</a> to let us know you're game!  On the first of November, we’ll announce the story for everyone to start writing on Twitter and via email.  It’ll be a science fiction story, which fittingly has infinite possibilities.
-					%p Stay tuned!
-					%p - Team Smileku
+					%p.post-body Hello writers! 
+					%p.post-body The time is nigh for <a href="http://nanowrimo.org/" target="_blank">National Novel Writing Month</a>, or as some like to call it, November.  This month, thousands of brave writers around the world battle inner demons, childhood fears and their darkest secrets... Or something like that.  By the end, they emerge as novelists with the word count to prove it.
+					%p.post-body For most of us, writing doesn’t come easy.  Faced with the challenge of fifty thousand words over the course of thirty days, it’s not unusual to feel a bit queasy.  Even the best writers face the time tested challenges of writers block and its close cousin procrastination.  <strong>That’s why we’re doing a collaborative NaNo on Smileku.</strong>
+					%p.post-body Many writers want to do NaNoWriMo but don’t have the time to commit a whole 50,000 words on their own.  That’s okay.  We’re putting together a collaborative story on Smileku for writers to add to through the month of November.  This way anyone can get in on the action, writing fast and furious NaNo style without making any grand commitments.
+					%p.post-body If you’d like to get involved, <strong><a href="/registration">create an account</a></strong> on Smileku if you haven’t already.  Then send us an <a href="mailto:contact@smileku.com?Subject=NaNoWriMo%20I%27m%20in" target="_blank">email</a> or <a href="http://clicktotweet.com/dFrVf" target="_blank">tweet us</a> to let us know you're game!  On the first of November, we’ll announce the story for everyone to start writing on Twitter and via email.  It’ll be a science fiction story, which fittingly has infinite possibilities.
+					%p.post-body Stay tuned!
+					%br
+					%p <em>- Team Smileku</em>
