--- a/app/views/app_mailer/password_reset_email.html.erb
+++ b/app/views/app_mailer/password_reset_email.html.erb
@@ -6,7 +6,7 @@
   <body>
     <p>Hi <%= @user.username %>,</p> 
 		<p>Sorry you've been having trouble logging into Smileku.  Please click the link below to reset your password:</p>
-		<h3><%= link_to "Reset your Smileku Password", password_reset_url(@user.token) %></h3>
+		<h3><%= link_to "Reset your Smileku Password", password_reset_url(@user.token, :utm_source => "appmailer", :utm_medium => "email", :utm_campaign => "pwreset") %></h3>
 		<p>Let us know if you have any additional questions.</p>
 		<p>- Team Smileku</p>
   </body>
