add invite links

--- a/app/views/invites/new.html.haml
+++ b/app/views/invites/new.html.haml
@@ -5,7 +5,7 @@
       = form_tag action: :create, method: :post do
         %header
           %h1 Tell your friends about us!
-          %p If you like what we're doing, please help us spread the word about Smileku.  You can easily <strong><a href="#">send a tweet</a></strong> or email a friend with the form below.
+          %p If you like what we're doing, please help us spread the word about Smileku.  You can easily <strong><a href="https://twitter.com/intent/tweet?text=Writing+with+people+on+%40smilekus+is+a+blast%21+Try+it+out+at+http%3A%2F%2Fwww.smileku.com%2F%3Futm_source%3Dtwitter%26utm_medium%3Dsocial%26utm_campaign%3Dinvites" target="_blank">send a tweet</a></strong> or email a friend with the form below.
         %br
         %fieldset
           = label_tag :name, "Friend's Name"
