--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -5,7 +5,7 @@
 			=link_to "&infin;".html_safe, root_path, :class => "brand"
 			%ul.nav.pull-right
 				%li
-					=link_to "Invite", "#"
+					=link_to "Invite", new_invite_path
 				%li
 					=link_to "Profile", user_path(current_user)
 				%li
