--- a/app/views/stories/show.html.haml
+++ b/app/views/stories/show.html.haml
@@ -1,18 +1,18 @@
 %section.container
-	.row
+	.row-fluid
 		.span5
-			.row.span5
+			.row-fluid
 				%h2= @story.title
-			.row.span4
+			.row-fluid
 				= image_tag @story.large_cover
 				.well.row10= @description.html_safe
 		.span7
-			.row
+			.row-fluid
 				%h3= "#{@kus.count} Kus since #{@story.created_at.strftime('%B %Y')}"
 				- @kus.each do |k|
-					.row
-						.span1
+					.row-fluid
+						.span2
 							%h5= "No. #{k.number_in_story}"
 							%p= "by #{k.author_name}"
-						.span6.row10
+						.span10.row10
 							%p= link_to k.body.truncate(170), ku_path(k)
