--- a/app/assets/stylesheets/home_page.css.scss
+++ b/app/assets/stylesheets/home_page.css.scss
@@ -1,8 +1,21 @@
-.stories {
-  margin: 25px;
+.story {
+  min-height: 260px;
+  max-width: 200px;
+  padding-right: 8px;
+  float: left;
 }
 
 li.activities > a {
 	font-size: 24px;
 	line-height: 1.2em;
+}
+
+.sidebar {
+	margin-top: 55px;
+	max-width: 250px;
+	float: right;
+}
+
+.twitter-box {
+	width: 100%;
 }
